# CPP-neural-network-vrom-vroms

./: CMakeLists.txt
src/: main.cpp
